versions/v2.12/modules/en/pages/security/compliance-scans/custom-benchmark.adoc
= Creating a Custom Benchmark Version for Running a Cluster Scan
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-08-26
:page-revdate: {revdate}
:community-path: integrations-in-rancher/compliance-scans/custom-benchmark 
:product-path: security/compliance-scans/custom-benchmark
:experimental:

Each Benchmark Version defines a set of test configuration files that define the Compliance tests to be run by the https://github.com/aquasecurity/kube-bench[kube-bench] tool.
The `rancher-compliance` application installs a few default Benchmark Versions which are listed under Compliance Benchmark application menu.

But there could be some Kubernetes cluster setups that require custom configurations of the Benchmark tests. For example, the path to the Kubernetes config files or certs might be different than the standard location where the upstream CIS Benchmarks look for them.

But in the following cases, a custom configuration or remediation may be required:

* Non-standard file locations: When Kubernetes binaries, configuration or certificate paths deviate from upstream benchmark defaults.
+
Example: Unlike traditional Kubernetes, K3s bundles control plane components into a single binary. Therefore, `--anonymous-auth` flag presence and configuration should be verified in K3s' logs (`journalctl`), not via `kube-apiserver` process checks (`ps`).

* Alternative risk mitigations: If a setup doesn't meet a check but has an equally effective compensating control with justification. Or simply is not concerned by the check requirement because of its design.
+
Example: By default, K3s embeds the api server within the k3s process. There is no API server pod specification file, so verifying the latter's file permissions is not required.

== 1. Prepare the Custom Benchmark Version ConfigMap

To create a custom benchmark version, first you need to create a ConfigMap containing the benchmark version's config files and upload it to your Kubernetes cluster where you want to run the scan.

To prepare a custom benchmark version ConfigMap, suppose we want to add a custom Benchmark Version named `foo`.

. Create a directory named `foo` and inside this directory, place all the config YAML files that the https://github.com/aquasecurity/kube-bench[kube-bench] tool looks for. For example, here are the config YAML files for a Generic CIS 1.5 Benchmark Version https://github.com/aquasecurity/kube-bench/tree/master/cfg/cis-1.5
. Place the complete `config.yaml` file, which includes all the components that should be tested.
. Add the Benchmark version name to the `target_mapping` section of the `config.yaml`:
+
[,yaml]
----
 target_mapping:
   "foo":
     - "master"
     - "node"
     - "controlplane"
     - "etcd"
     - "policies"
----

. Upload this directory to your Kubernetes Cluster by creating a ConfigMap:
+
[,yaml]
----
 kubectl create configmap -n <namespace> foo --from-file=<path to directory foo>
----

== 2. Add a Custom Benchmark Version to a Cluster

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to add a custom benchmark and click *Explore*.
. In the left navigation bar, click *Compliance > Benchmark Version*.
. Click *Create*.
. Enter the *Name* and a description for your custom benchmark version.
. Choose the cluster provider that your benchmark version applies to.
. Choose the ConfigMap you have uploaded from the dropdown.
. Add the minimum and maximum Kubernetes version limits applicable, if any.
. Click *Create*.

== 3. Create a New Profile for the Custom Benchmark Version

To run a scan using your custom benchmark version, you need to add a new Profile pointing to this benchmark version.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to add a custom benchmark and click *Explore*.
. In the left navigation bar, click *Compliance > Scan*.
. Click *Create*.
. Provide a *Name* and description. In this example, we name it `foo-profile`.
. Choose the Benchmark Version from the dropdown.
. Click *Create*.

== 4. Run a Scan Using the Custom Benchmark Version

Once the Profile pointing to your custom benchmark version `foo` has been created, you can create a new Scan to run the custom test configs in the Benchmark Version.

To run a scan,

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to add a custom benchmark and click *Explore*.
. In the left navigation bar, click menu:CIS Benchmark[Scan].
. Click *Create*.
. Choose the new cluster scan profile.
. Click *Create*.

*Result:* A report is generated with the scan results. To see the results, click the name of the scan that appears.
